ejercicios y tarea hecho

--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -1128,7 +1128,7 @@
         "id": "7mL6XEitTD1S",
         "outputId": "f53e622a-aae2-4bc2-e3cb-a6918f401911"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1169,7 +1169,7 @@
         "id": "EsjhOyV7UTwz",
         "outputId": "512174f8-33fd-4992-9e53-75263a107845"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1230,7 +1230,7 @@
         "id": "i0p-hbgiUZvH",
         "outputId": "3096dd2f-b848-4ea1-9f00-afefb8b8d232"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1278,7 +1278,7 @@
         "id": "-UUANN3KUocA",
         "outputId": "a35c0ac0-5688-48cc-a7e2-a442c901d684"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1676,17 +1676,22 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "SUELDO NETO Y REDUCCION"
-      ],
-      "metadata": {
-        "id": "-9tGm_p3WhbT"
-      }
-    },
-    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Determinar si un numero introducido por el usuario es primo\n",
+        "num = int(input(\"Num: \"))\n",
+        "\n",
+        "acum = 0\n",
+        "i=1\n",
+        "while i<=num and acum<=2:\n",
+        "  if( num%i==0 ):\n",
+        "    acum+=1\n",
+        "  i+=1\n",
+        "if(acum<=2):\n",
+        "  print(\"El numero \", num, \" ES primo\")\n",
+        "else:\n",
+        "  print(\"El numero \", num, \" NO es primo\")"
+      ],
       "metadata": {
         "id": "lzGfaE3iWgae"
       },
@@ -1694,22 +1699,352 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "TARIFA DE AGUA"
-      ],
-      "metadata": {
-        "id": "2ro_KW1tWmOq"
-      }
-    },
-    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Generar la tabla de multiplicar de un numero dado por el usuario.\n",
+        "continuar=\"s\"\n",
+        "while(continuar==\"s\"):\n",
+        "  ntabla = int(input(\"Tabla: \"))\n",
+        "  for i in range(1,11):\n",
+        "    print(ntabla, \"x\", i, \"=\", ntabla*i)\n",
+        "  continuar = input(\"Copntinuar s, sino cualquier tecla: \")"
+      ],
       "metadata": {
         "id": "Jvl3BU_wWlxD"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "PROGRAMACION ORIENTADA A OBJETOS\n",
+        "\n",
+        "CLASES"
+      ],
+      "metadata": {
+        "id": "oOqN1erc6qQu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class calculadora:\n",
+        "  def sumar(num1, num2):\n",
+        "    return num1+num2"
+      ],
+      "metadata": {
+        "id": "xfT7FcOW6kUC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "OBJETO"
+      ],
+      "metadata": {
+        "id": "aQQIRkX56zeF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "objCalculadora = calculadora() #creamos el objeto apartir de la clase\n",
+        "num1 = float(input(\"Num1: \"))\n",
+        "num2 = float(input(\"Num2: \"))\n",
+        "print(num1, \"+\", num2, \"=\", calculadora.sumar(num1, num2))"
+      ],
+      "metadata": {
+        "id": "m4ir5vsT60Tt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Hecer un programa que lea una serie de numero introeducidos por el usuario y determine la media artimetica.\n",
+        "from math import sqrt\n",
+        "class estadistica:\n",
+        "  def media(self, serie):\n",
+        "    suma = 0\n",
+        "    for num in serie:\n",
+        "      suma += int(num)\n",
+        "    return suma/len(serie)\n",
+        "\n",
+        "  def tipica(self, serie):\n",
+        "    media = self.media(serie)\n",
+        "    suma = 0\n",
+        "    for num in serie:\n",
+        "      suma += (int(num)-media)**2\n",
+        "    return sqrt( suma/len(serie) )\n",
+        "\n",
+        "\n",
+        "serie = input(\"Serie ejem: 1,5,2,3: \").split(\",\")\n",
+        "objEstadistica = estadistica()\n",
+        "print(\"La media es: \", objEstadistica.media(serie), \"la desvicacion tipica es: \", round(objEstadistica.tipica(serie), 2) )\n",
+        ""
+      ],
+      "metadata": {
+        "id": "jQA4RGSw6563"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. Varianza de una serie de números"
+      ],
+      "metadata": {
+        "id": "InB2Cd1M9JNJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "def calcular_varianza_con_input():\n",
+        "    \"\"\"\n",
+        "    Calcula la varianza de una serie de números introducidos por el usuario.\n",
+        "    \"\"\"\n",
+        "\n",
+        "    numeros_str = input(\"Introduce los números separados por espacios (Ej: 10 20 30 40): \")\n",
+        "    try:\n",
+        "\n",
+        "        numeros = [float(n) for n in numeros_str.split()]\n",
+        "\n",
+        "        if len(numeros) < 2:\n",
+        "            print(\"Se necesitan al menos dos números para calcular la varianza.\")\n",
+        "            return\n",
+        "\n",
+        "\n",
+        "        varianza = np.var(numeros)\n",
+        "\n",
+        "        print(f\"\\nNúmeros ingresados: {numeros}\")\n",
+        "        print(f\"Varianza: {varianza:.4f}\")\n",
+        "\n",
+        "    except ValueError:\n",
+        "        print(\"Entrada no válida. Asegúrate de que todos los valores sean números.\")\n",
+        "\n",
+        "\n",
+        "calcular_varianza_con_input()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aHxzhuhk9NX3",
+        "outputId": "8f133aaf-8e62-4b9a-b32e-36628574d496"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Introduce los números separados por espacios (Ej: 10 20 30 40): 23 30 43 33 22 11 11 333 222 \n",
+            "\n",
+            "Números ingresados: [23.0, 30.0, 43.0, 33.0, 22.0, 11.0, 11.0, 333.0, 222.0]\n",
+            "Varianza: 11819.8765\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2. Frecuencia de una serie de números"
+      ],
+      "metadata": {
+        "id": "KXs7RleD_Qs8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from collections import Counter\n",
+        "\n",
+        "def encontrar_frecuencia_con_input():\n",
+        "    \"\"\"\n",
+        "    Encuentra la frecuencia de cada número en una serie introducida por el usuario.\n",
+        "    \"\"\"\n",
+        "    numeros_str = input(\"Introduce los números separados por espacios (Ej: 10 20 10 30 20): \")\n",
+        "    try:\n",
+        "\n",
+        "        numeros = [float(n) for n in numeros_str.split()]\n",
+        "\n",
+        "\n",
+        "        if not numeros:\n",
+        "            print(\"No se ingresaron números.\")\n",
+        "            return\n",
+        "\n",
+        "\n",
+        "        frecuencias = Counter(numeros)\n",
+        "\n",
+        "        print(\"\\nFrecuencia de cada número:\")\n",
+        "\n",
+        "        for numero, frecuencia in sorted(frecuencias.items()):\n",
+        "            print(f\"El número {numero} aparece {frecuencia} vez/veces.\")\n",
+        "\n",
+        "    except ValueError:\n",
+        "        print(\"Entrada no válida. Asegúrate de que todos los valores sean números.\")\n",
+        "\n",
+        "encontrar_frecuencia_con_input()\n",
+        "3"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tZKqYL05_WSc",
+        "outputId": "9494f733-bad8-4d88-89ea-9d8c7e58a7b2"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Introduce los números separados por espacios (Ej: 10 20 10 30 20): 04 34 34 55 5 5 55 5  5 5 55 5 5 \n",
+            "\n",
+            "Frecuencia de cada número:\n",
+            "El número 4.0 aparece 1 vez/veces.\n",
+            "El número 5.0 aparece 7 vez/veces.\n",
+            "El número 34.0 aparece 2 vez/veces.\n",
+            "El número 55.0 aparece 3 vez/veces.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3. Programa para determinar si una palabra es un palíndromo"
+      ],
+      "metadata": {
+        "id": "C0YR_TEt_oPg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def es_palindromo_con_input():\n",
+        "    \"\"\"\n",
+        "    Pide al usuario una palabra y determina si es un palíndromo.\n",
+        "    \"\"\"\n",
+        "    palabra = input(\"Introduce una palabra para verificar si es un palíndromo: \")\n",
+        "\n",
+        "\n",
+        "    palabra_limpia = palabra.lower().replace(\" \", \"\")\n",
+        "\n",
+        "    palabra_invertida = palabra_limpia[::-1]\n",
+        "\n",
+        "\n",
+        "    if palabra_limpia == palabra_invertida:\n",
+        "        print(f\"'{palabra}' es un palíndromo.\")\n",
+        "    else:\n",
+        "        print(f\"'{palabra}' no es un palíndromo.\")\n",
+        "\n",
+        "es_palindromo_con_input()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7tN3nUx1_pbr",
+        "outputId": "b56d5f9d-956f-43d3-9cc3-0073cfcfe5cc"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Introduce una palabra para verificar si es un palíndromo: pan\n",
+            "'pan' no es un palíndromo.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#crear un programa que calcule el mayor de n numeros\n",
+        "class calculadora:\n",
+        "  def mayor(self, serie):\n",
+        "    nmayor = int(serie[0]) # Initialize with the first element as an integer\n",
+        "    for i in serie:\n",
+        "      num = int(i) # Convert to integer inside the loop\n",
+        "      if (num > nmayor):\n",
+        "        nmayor = num\n",
+        "    return nmayor\n",
+        "\n",
+        "  def menor(self, serie):\n",
+        "    nmenor = int(serie[0]) # Initialize with the first element as an integer\n",
+        "    for i in serie:\n",
+        "      num = int(i) # Convert to integer inside the loop\n",
+        "      if (num < nmenor):\n",
+        "        nmenor = num\n",
+        "    return nmenor"
+      ],
+      "metadata": {
+        "id": "iwZ9iMKhg9mp"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " calcular = calculadora()\n",
+        " serie = input(\"Serie ejem: 1,5,2,3: \").split(\",\")\n",
+        " print (serie)\n",
+        " print(\"El mayor es: \", calcular.mayor(serie)), print(\"El menor es: \", calcular.menor(serie))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HugvFuAfkb-b",
+        "outputId": "ef791ea3-f03b-4210-d19b-4857d33a83e1"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Serie ejem: 1,5,2,3: 2,3,4,5\n",
+            "['2', '3', '4', '5']\n",
+            "El mayor es:  5\n",
+            "El menor es:  2\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(None, None)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
     }
   ]
 }
