--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -1784,8 +1784,7 @@
         "\n",
         "serie = input(\"Serie ejem: 1,5,2,3: \").split(\",\")\n",
         "objEstadistica = estadistica()\n",
-        "print(\"La media es: \", objEstadistica.media(serie), \"la desvicacion tipica es: \", round(objEstadistica.tipica(serie), 2) )\n",
-        ""
+        "print(\"La media es: \", objEstadistica.media(serie), \"la desvicacion tipica es: \", round(objEstadistica.tipica(serie), 2) )\n"
       ],
       "metadata": {
         "id": "jQA4RGSw6563"
@@ -1840,7 +1839,7 @@
         "id": "aHxzhuhk9NX3",
         "outputId": "8f133aaf-8e62-4b9a-b32e-36628574d496"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1903,7 +1902,7 @@
         "id": "tZKqYL05_WSc",
         "outputId": "9494f733-bad8-4d88-89ea-9d8c7e58a7b2"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1968,7 +1967,7 @@
         "id": "7tN3nUx1_pbr",
         "outputId": "b56d5f9d-956f-43d3-9cc3-0073cfcfe5cc"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2004,7 +2003,7 @@
       "metadata": {
         "id": "iwZ9iMKhg9mp"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2022,7 +2021,7 @@
         "id": "HugvFuAfkb-b",
         "outputId": "ef791ea3-f03b-4210-d19b-4857d33a83e1"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2043,6 +2042,267 @@
           },
           "metadata": {},
           "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "UPF68p4rmtNy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calcular_impuesto(monto_actividad):\n",
+        "    \"\"\"\n",
+        "    Calcula el impuesto a las actividades económicas según la tabla proporcionada.\n",
+        "\n",
+        "    Args:\n",
+        "        monto_actividad (float): El monto de la actividad económica.\n",
+        "\n",
+        "    Returns:\n",
+        "        float: El valor del impuesto a pagar.\n",
+        "    \"\"\"\n",
+        "    impuesto = 0\n",
+        "\n",
+        "    if 0.01 <= monto_actividad <= 500:\n",
+        "        impuesto = 1.5\n",
+        "    elif 500.01 <= monto_actividad <= 1000:\n",
+        "        impuesto = 1.5 + (monto_actividad - 500.01) / 1000 * 3\n",
+        "    elif 1000.01 <= monto_actividad <= 2000:\n",
+        "        impuesto = 3 + (monto_actividad - 1000.01) / 1000 * 3\n",
+        "    elif 2000.01 <= monto_actividad <= 3000:\n",
+        "        impuesto = 6 + (monto_actividad - 2000.01) / 1000 * 3\n",
+        "    elif 3000.01 <= monto_actividad <= 6000:\n",
+        "        impuesto = 9 + (monto_actividad - 3000.01) / 1000 * 2\n",
+        "    elif 8000.01 <= monto_actividad <= 18000:\n",
+        "        impuesto = 15 + (monto_actividad - 8000.01) / 1000 * 2\n",
+        "    elif 18000.01 <= monto_actividad <= 30000:\n",
+        "        impuesto = 39 + (monto_actividad - 18000.01) / 1000 * 2\n",
+        "    elif 30000.01 <= monto_actividad <= 60000:\n",
+        "        impuesto = 63 + (monto_actividad - 30000.01) / 1000 * 1\n",
+        "    elif 60000.01 <= monto_actividad <= 100000:\n",
+        "        impuesto = 93 + (monto_actividad - 60000.01) / 1000 * 0.8\n",
+        "    elif 100000.01 <= monto_actividad <= 200000:\n",
+        "        impuesto = 125 + (monto_actividad - 100000.01) / 1000 * 0.7\n",
+        "    elif 200000.01 <= monto_actividad <= 300000:\n",
+        "        impuesto = 195 + (monto_actividad - 200000.01) / 1000 * 0.6\n",
+        "    elif 300000.01 <= monto_actividad <= 400000:\n",
+        "        impuesto = 255 + (monto_actividad - 300000.01) / 1000 * 0.45\n",
+        "    elif 400000.01 <= monto_actividad <= 500000:\n",
+        "        impuesto = 300 + (monto_actividad - 400000.01) / 1000 * 0.4\n",
+        "    elif 500000.01 <= monto_actividad <= 1000000:\n",
+        "        impuesto = 340 + (monto_actividad - 500000.01) / 1000 * 0.3\n",
+        "    elif 1000000.01 <= monto_actividad <= 99999999:\n",
+        "        impuesto = 490 + (monto_actividad - 1000000.01) / 1000 * 0.18\n",
+        "    else:\n",
+        "        print(\"El monto de actividad económica está fuera de los rangos definidos.\")\n",
+        "        return None\n",
+        "\n",
+        "    return impuesto\n",
+        "\n",
+        "\n",
+        "def main():\n",
+        "    try:\n",
+        "\n",
+        "        monto = float(input(\"Ingrese el monto de la actividad económica: \"))\n",
+        "\n",
+        "\n",
+        "        impuesto_a_pagar = calcular_impuesto(monto)\n",
+        "\n",
+        "\n",
+        "        if impuesto_a_pagar is not None:\n",
+        "            print(f\"\\nEl impuesto a pagar es: ${impuesto_a_pagar:.2f}\")\n",
+        "\n",
+        "    except ValueError:\n",
+        "        print(\"Entrada inválida. Por favor, ingrese un número.\")\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()"
+      ],
+      "metadata": {
+        "id": "Bwr3qFAUmsLp",
+        "outputId": "23535a69-90dc-424f-fd11-854865568645",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese el monto de la actividad económica: 1875.79\n",
+            "\n",
+            "El impuesto a pagar es: $5.63\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def convertir_area():\n",
+        "    \"\"\"\n",
+        "    Convierte una medida de área entre diferentes unidades.\n",
+        "    \"\"\"\n",
+        "\n",
+        "\n",
+        "    unidades = {\n",
+        "        \"Metro Cuadrado\": 1,\n",
+        "        \"Kilómetro Cuadrado\": 1_000_000,\n",
+        "        \"Hectárea\": 10_000,\n",
+        "        \"Pie Cuadrado\": 0.092903,\n",
+        "        \"Centímetro Cuadrado\": 0.0001,\n",
+        "        \"Milla Cuadrada\": 2_589_988.11,\n",
+        "        \"Acre\": 4046.86,\n",
+        "        \"Yarda Cuadrada\": 0.836127,\n",
+        "        \"Manzana\": 7000,\n",
+        "        \"Tarea\": 437.5,\n",
+        "        \"Vara Cuadrada\": 0.7\n",
+        "    }\n",
+        "\n",
+        "    print(\"Unidades de área disponibles:\")\n",
+        "    for i, unidad in enumerate(unidades.keys(), 1):\n",
+        "        print(f\"{i}. {unidad}\")\n",
+        "\n",
+        "    try:\n",
+        "\n",
+        "        eleccion_origen = int(input(\"\\nSelecciona el número de la unidad de origen: \")) - 1\n",
+        "        unidad_origen = list(unidades.keys())[eleccion_origen]\n",
+        "\n",
+        "        valor = float(input(f\"Ingresa la cantidad en '{unidad_origen}': \"))\n",
+        "\n",
+        "        eleccion_destino = int(input(\"Selecciona el número de la unidad de destino: \")) - 1\n",
+        "        unidad_destino = list(unidades.keys())[eleccion_destino]\n",
+        "\n",
+        "\n",
+        "        valor_en_m2 = valor * unidades[unidad_origen]\n",
+        "        resultado = valor_en_m2 / unidades[unidad_destino]\n",
+        "\n",
+        "        print(f\"\\n Resultado: {valor} {unidad_origen} equivale a {resultado} {unidad_destino}.\")\n",
+        "\n",
+        "    except (ValueError, IndexError):\n",
+        "        print(\"\\n Entrada no válida. Por favor, ingresa números correctos de la lista.\")\n",
+        "\n",
+        "convertir_area()"
+      ],
+      "metadata": {
+        "id": "_RVh_rjjndPd",
+        "outputId": "6d488bdc-29b3-4cda-811e-b20616607a0b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Unidades de área disponibles:\n",
+            "1. Metro Cuadrado\n",
+            "2. Kilómetro Cuadrado\n",
+            "3. Hectárea\n",
+            "4. Pie Cuadrado\n",
+            "5. Centímetro Cuadrado\n",
+            "6. Milla Cuadrada\n",
+            "7. Acre\n",
+            "8. Yarda Cuadrada\n",
+            "9. Manzana\n",
+            "10. Tarea\n",
+            "11. Vara Cuadrada\n",
+            "\n",
+            "Selecciona el número de la unidad de origen: 10\n",
+            "Ingresa la cantidad en 'Tarea': 1\n",
+            "Selecciona el número de la unidad de destino: 1\n",
+            "\n",
+            " Resultado: 1.0 Tarea equivale a 437.5 Metro Cuadrado.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def atm_simulator():\n",
+        "    \"\"\"\n",
+        "    Simula el funcionamiento de un cajero automático, dispensando la cantidad\n",
+        "    de billetes y monedas para un retiro.\n",
+        "    \"\"\"\n",
+        "    try:\n",
+        "        amount_to_withdraw = float(input(\"Ingrese la cantidad a retirar: \"))\n",
+        "\n",
+        "        if amount_to_withdraw <= 0:\n",
+        "            print(\"La cantidad debe ser mayor a cero. Intente de nuevo.\")\n",
+        "            return\n",
+        "\n",
+        "\n",
+        "        denominations = [\n",
+        "            20, 10, 5, 1,\n",
+        "            0.25, 0.10, 0.05, 0.01\n",
+        "        ]\n",
+        "\n",
+        "\n",
+        "        print(\"\\nDesglose de billetes y monedas:\")\n",
+        "\n",
+        "        for denomination in denominations:\n",
+        "\n",
+        "            count = int(round(amount_to_withdraw / denomination, 2))\n",
+        "\n",
+        "            if count > 0:\n",
+        "                if denomination >= 1:\n",
+        "                    if count == 1:\n",
+        "                        print(f\"{count} billete de a {int(denomination)}\")\n",
+        "                    else:\n",
+        "                        print(f\"{count} billetes de a {int(denomination)}\")\n",
+        "                else:\n",
+        "                    if count == 1:\n",
+        "                        print(f\"{count} moneda de a {denomination:.2f} ctvs.\")\n",
+        "                    else:\n",
+        "                        print(f\"{count} monedas de a {denomination:.2f} ctvs.\")\n",
+        "\n",
+        "\n",
+        "                amount_to_withdraw = round(amount_to_withdraw - (count * denomination), 2)\n",
+        "\n",
+        "        if amount_to_withdraw > 0:\n",
+        "            print(f\"\\nNota: Quedan {amount_to_withdraw:.2f} que no pueden ser dispensados con las denominaciones disponibles.\")\n",
+        "\n",
+        "    except ValueError:\n",
+        "        print(\"Entrada inválida. Por favor, ingrese un número.\")\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    atm_simulator()"
+      ],
+      "metadata": {
+        "id": "RuoT6cbkpsYE",
+        "outputId": "0ab38ef6-9751-4744-9798-d4a361841048",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese la cantidad a retirar: 99.89\n",
+            "\n",
+            "Desglose de billetes y monedas:\n",
+            "4 billetes de a 20\n",
+            "1 billete de a 10\n",
+            "1 billete de a 5\n",
+            "4 billetes de a 1\n",
+            "3 monedas de a 0.25 ctvs.\n",
+            "1 moneda de a 0.10 ctvs.\n",
+            "4 monedas de a 0.01 ctvs.\n"
+          ]
         }
       ]
     }
